# network-programming-demo

./: ip.md  tcp.md
c/: CMakeLists.txt
c/src/: CMakeLists.txt
c/src/demo/: CMakeLists.txt
c/src/demo/echo/: CMakeLists.txt  echo.c  echo.h  init-server.c  init-server.h
c/src/demo/echo/echo1/: echo-client1.c  echo-server1.c
c/src/demo/echo/echo2/: echo-client2.c  echo-server2.c
c/src/demo/echo/echo3/: echo-server3.c
c/src/demo/echo/echo4/: echo-server4.c
c/src/demo/echo/echo5/: echo-server5.c
c/src/demo/echo/echo6/: READMD.md  echo-server6.c
c/src/demo/function/: CMakeLists.txt  gethostbyname.c
c/src/demo/hello/: CMakeLists.txt  hello-client.c  hello-server.c
c/src/share/: CMakeLists.txt  error.c  share.h  socket_util.c
kotlin/: build.gradle  settings.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/cn/staynoob/netdemo/: package-info.kt
kotlin/src/main/kotlin/cn/staynoob/netdemo/echo/: EchoServer.kt  package-info.kt
kotlin/src/main/kotlin/cn/staynoob/netdemo/echo/netty/: EchoClient.kt  EchoClientHandler.kt  EchoServerHandler.kt  NettyNioServer.kt  NettyOioServer.kt
kotlin/src/main/kotlin/cn/staynoob/netdemo/echo/nio/: PlainNioServer.kt
kotlin/src/main/kotlin/cn/staynoob/netdemo/echo/oio/: PlainOioClient.kt  PlainOioServer.kt
python/src/: TCPClient.py  TCPServer.py  UDPClient.py  UDPServer.py
